<resources>
    <string name="app_name">OtusCoroutines</string>
    <string name="date">Date:</string>
    <string name="new_confirmed">New Confirmed:</string>
    <string name="new_deaths">New Deaths:</string>
    <string name="new_recovered">New Recovered:</string>
    <string name="total_confirmed">Total Confirmed:</string>
    <string name="total_deaths">Total Deaths:</string>
    <string name="total_recovered">Total Recovered:</string>
    <string name="refresh_button">Refresh</string>
</resources>
